# python-fastapi-scrapy-celery-rabbitmq

./: Dockerfile  README.md  celeryconfig.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  scrapy.cfg
api/: Dockerfile  main.py  models.py  task.py
docker/: docker-compose.with-rabbitmq.yml
docker/rabbitmq/: definitions.json  rabbitmq.conf
worker/: __init__.py  app_worker.py  celeryconfig.py  tasks.py
worker/celery/: __init__.py
worker/crawler/: items.py  settings.py
worker/crawler/spiders/: ukg_spider.py
